--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    implementation 'com.tom-roush:pdfbox-android:2.0.16.0'
 }
