--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,7 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    int versionCode = "git rev-list HEAD --count".execute().text.trim().toInteger()
-    print("Version code: $versionCode")
+    int versionCode = 1
     return versionCode
 }
 
