--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,17 +115,29 @@
             android:theme="@style/Theme.ValueTransfer"
             android:screenOrientation="portrait"
             android:launchMode="singleTop">
-            <tools:validation testUrl="http://trustchain.com/requestMoney?receiver=Tat&amp;amount=15.23&amp;message=party" />
+            <tools:validation testUrl="http://trustchain.tudelft.nl/requestMoney?receiver=Tat&amp;amount=15.23&amp;message=party" />
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:host="trustchain.com" />
-                <data android:scheme="http" />
-                <data android:scheme="https" />
-                <data android:pathPrefix="/requestMoney" />
+                <data
+                    android:scheme="http"
+                    android:host="trustchain.tudelft.nl"
+                    android:pathPrefix="/requestMoney" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="trustchain.tudelft.nl"
+                    android:pathPrefix="/requestMoney" />
             </intent-filter>
         </activity>
 
