Update loading of trust scores json
Signed-off-by: Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,8 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    int versionCode = 1
+    int versionCode = "git rev-list HEAD --count".execute().text.trim().toInteger()
+    print("Version code: $versionCode")
     return versionCode
 }
 
