--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -76,6 +76,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    // Logging
+    implementation 'io.github.microutils:kotlin-logging:1.7.7'
+
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
