--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ buildscript {
     }
 }
 
+ext {
+    ndkVersion = '24.0.8215888'
+}
+
 ktlint {
     version = "$ktlint_version"
     android = true
@@ -27,7 +31,7 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    int versionCode = "git rev-list HEAD --count".execute().text.trim().toInteger()
+    int versionCode = 1
     print("Version code: $versionCode")
     return versionCode
 }
@@ -83,6 +87,7 @@ android {
         exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
         exclude 'META-INF/DEPENDENCIES'
     }
+    ndkVersion ndkVersion
 }
 
 repositories {
