--- a/common/build.gradle
+++ b/common/build.gradle
@@ -64,6 +64,7 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true
     }
+    ndkVersion '24.0.8215888'
 }
 
 repositories {
