--- a/eurotoken/build.gradle
+++ b/eurotoken/build.gradle
@@ -41,6 +41,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    ndkVersion '24.0.8215888'
 }
 
 dependencies {
