--- a/liquidity-pool/build.gradle
+++ b/liquidity-pool/build.gradle
@@ -71,6 +71,7 @@ android {
         exclude "META-INF/ASL2.0"
         exclude("META-INF/*.kotlin_module")
     }
+    ndkVersion '24.0.8215888'
 }
 
 allprojects {
