--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ ktlint {
 
 // Generate a version code from git commit count
 static def generateVersionCode() {
-    int versionCode = 1
+    int versionCode = "git rev-list HEAD --count".execute().text.trim().toInteger()
     print("Version code: $versionCode")
     return versionCode
 }
