--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.30'
+    ext.kotlin_version = '1.6.0'
     ext.ktlint_version = '0.40.0'
     ext.coroutines_version = '1.4.2'
     ext.ktlint_gradle_version = '10.0.0'
-    ext.sqldelight_version = '1.2.1'
-    ext.nav_version = "2.2.1"
+    ext.sqldelight_version = '1.5.2'
+    ext.nav_version = '2.4.1'
     ext.fragment_version = '1.2.4'
     ext.lifecycle_version = "2.2.0"
     ext.dokka_version = "0.10.1"
@@ -18,13 +18,13 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jlleitschuh.gradle:ktlint-gradle:$ktlint_gradle_version"
         classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
