--- a/common/build.gradle
+++ b/common/build.gradle
@@ -30,10 +30,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
 
-        buildConfigField "String", "DEFAULT_GATEWAY_IP", "\"https://khattat.nl\""
+        buildConfigField "String", "DEFAULT_GATEWAY_IP", "\"0.0.0.0\""
         buildConfigField "Integer", "DEFAULT_GATEWAY_PORT", "8090"
         buildConfigField "String", "DEFAULT_GATEWAY_PK", "\"4c69624e61434c504b3ac16efa9bc1784b76d418dc051fca4e4ac645fd68699a26dfec1d1e880846f45c184297a0b52109f67de0d49dbc52fea3328d1d73a58ff3b99bfda453cbdcd350\""
         buildConfigField "String", "DEFAULT_GATEWAY_NAME", "\"Localhost Gateway\""
+        buildConfigField "String", "DEFAULT_GATEWAY_HOST", "\"http://192.168.0.106:8000\""
 
 //        buildConfigField "String", "BITCOIN_FAUCET", "\"http://134.122.59.107:3000\""
         buildConfigField "String", "BITCOIN_FAUCET", "\"https://taproot.tribler.org\""
