--- a/valuetransfer/build.gradle
+++ b/valuetransfer/build.gradle
@@ -129,6 +129,8 @@ dependencies {
 
     // Side to confirm
     implementation "com.ncorti:slidetoact:0.9.0"
+
+    implementation "com.android.volley:volley:1.2.1"
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
