--- a/freedomOfComputing/build.gradle
+++ b/freedomOfComputing/build.gradle
@@ -57,7 +57,11 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'io.github.microutils:kotlin-logging:1.7.7'
     testImplementation 'junit:junit:4.12'
+    testImplementation "io.mockk:mockk:1.10.4"
+    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(':common')
@@ -69,4 +73,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+        "-Xopt-in=kotlin.RequiresOptIn"
+    ]
 }
