--- a/atomic-swap/build.gradle
+++ b/atomic-swap/build.gradle
@@ -15,6 +15,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        buildConfigField "String", "ETH_SWAP_CONTRACT", "\"0x8790bca86ee29530a17a9bf80bd9e6e3503ff4d1\""
+        buildConfigField "Long", "ETH_CHAIN_ID", "1337L"
     }
 
     buildTypes {
@@ -62,7 +65,6 @@ dependencies {
 
     implementation 'com.github.MattSkala:recyclerview-itemadapter:0.4'
 
-    testImplementation "org.web3j:web3j-unit:4.8.9"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
