--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,7 +114,20 @@
             android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:theme="@style/Theme.ValueTransfer"
             android:screenOrientation="portrait"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop">
+            <tools:validation testUrl="http://trustchain.tudelft.nl/requestMoney?receiver=Tat&amp;amount=15.23&amp;message=party" />
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:host="trustchain.tudelft.nl"/>
+                <data android:pathPrefix="/requestMoney" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="nl.tudelft.trustchain.valuetransfer.passport.PassportCaptureActivity"
