--- a/common-ethereum/build.gradle
+++ b/common-ethereum/build.gradle
@@ -14,7 +14,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        buildConfigField "String", "ETH_HTTP_URL", "\"https://myballsare.blue:8545\"" //todo repalce by local iP?
+        // 10.0.2.2 - IP address of the host system on Android emulator
+        // Refer to included Docker Compose to launch the nodes locally
+        buildConfigField "String", "ETH_HTTP_URL", "\"http://10.0.2.2:8545\""
 
         // The address of the MultiSig wallet deployed on the goerli test network.
         buildConfigField "String", "ETH_TEST_MULTISIG_ADDR", "\"0x2DfEecF7d2f5363149cC73cAb96C00575c732170\""
