added internal file system and external reader

--- a/literaturedao/src/main/AndroidManifest.xml
+++ b/literaturedao/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
     package="nl.tudelft.trustchain.literaturedao">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
+
+    <application>
+        <activity android:name=".LiteratureDaoActivity$Test" />
+    </application>
 </manifest>
