Atomic Swap app
* Added atomic swap app

* Downgraded library versions

* Added new activity for the atomic swap app

* Added fragments to atomic swap activity with navigation

* Extracted wallet stuff to separate, common library

* Extracted wallet stuff to separate, common library (ethereum)

* GUI for the swap wallet

* Fixed improper package names

* View model and binding for atomic swap wallet (Bitcoin wallet)

* Global Ethereum wallet (TODO: not working GUI yet)

* Fixed data binding for Bitcoin and Ethereum wallets

* Fixed Ethereum wallet

* Display Ethereum instead of Wei

* Fixed saving wallet password and keys to shared preferences

* Add functionality for creating and claiming btc swaps.

* Fix warning

* Added TransactionMonitor class

* added ipv8 community communication code

* renamed some references

* added AtomicSwapCommunity and the view for it, fixed the build

* Trying to test btcswap

* comment out default peer and add local regnet

* add callbacks to swap code.

* Fixed could not find tx error. turns out I was hashing the hash twice.

* Added an alert when trade offered received

* Created the wallet holder class

* Received an Accept message

* FIx some issues with the scripts

* Fix test

* Cleanup test

* minor UI updates

* Add swap reclaiming and test for it.

* Add eth swap contract and generate wrapper for it.

* Create and broadcast a transaction, wait for confirmation and notify the recipient

* Fix hashing hash twice.

* Fixed using nullable variable

* Fix some claim functionality and added test.

* BTC and ETH nodes in Docker containers + README

* Changed the peer address for regtest

* Fixed mistake

* Created a callback for recipient's transaction

* Handle Complete message

* Trade offers fragment

* Handle Complete message

* Swap fragment (WIP)

* Send tx instead txId

* fix swap

* Added a dialog after the claim transaction gets c

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,10 @@
             android:parentActivityName=".ui.dashboard.DashboardActivity" />
 
         <activity
+            android:name="nl.tudelft.trustchain.atomicswap.AtomicSwapActivity"
+            android:parentActivityName=".ui.dashboard.DashboardActivity" />
+
+        <activity
             android:name="nl.tudelft.trustchain.valuetransfer.ValueTransferMainActivity"
             android:parentActivityName=".ui.dashboard.DashboardActivity"
             android:theme="@style/Theme.ValueTransfer"
