--- a/liquidity-pool/build.gradle
+++ b/liquidity-pool/build.gradle
@@ -84,6 +84,8 @@ allprojects {
 
 dependencies {
     implementation project(":common")
+    implementation project(":common-bitcoin")
+    implementation project(":common-ethereum")
     implementation project(":ipv8-android")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
@@ -104,13 +106,6 @@ dependencies {
     implementation "com.google.android:flexbox:2.0.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.14.0"
-
-    // Wallet libraries
-    implementation group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.15.10'
-    implementation(group: 'org.web3j', name: 'core', version: '4.6.0-android') {
-        exclude group: 'org.bouncycastle'
-    }
-    implementation group: 'org.ethereum', name: 'geth-android-all-1.10.1-c2d2f4ed', ext: 'aar'
 
     // Testing
     testImplementation "junit:junit:4.12"
