Code cleanup of the Atomic Swap app

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -37,9 +37,11 @@ android {
 
 //        buildConfigField "String", "BITCOIN_FAUCET", "\"http://134.122.59.107:3000\""
         buildConfigField "String", "BITCOIN_FAUCET", "\"https://taproot.tribler.org\""
+
         // 10.0.2.2 - IP address of the host system on Android emulator
         // Refer to included Docker Compose to launch the nodes locally
-        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"10.0.2.2\""
+//        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"10.0.2.2\""
+        buildConfigField "String", "BITCOIN_DEFAULT_PEER", "\"134.122.59.107\""
     }
 
     buildTypes {
