--- a/literaturedao/src/main/AndroidManifest.xml
+++ b/literaturedao/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
 
     <application>
-        <activity android:name=".LiteratureDaoActivity$Test" />
+<!--        <activity android:name=".LiteratureDaoActivity$Test" />-->
+        <activity android:name=".LiteratureDaoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
