Freedom Of Computing: UI overhaul, gossiping functionality and stability fixes (#96)
* Prevent activity reloading on screen orientation change, this fixes the loaded app from being closed on screen orientation changing

* Saving state stability issue fix

* Don't recreate app each time onResume, use a hash map for storing state

* Allow arbitrary file names

* remove redundant fetch

* fix class fetch

* Basic static new design

* The state is now stored in a file

* code cleanup

* added comments

* added support for storing several states

* removed gson from FoC build.gradle

* Add basic on click event for file upload button

* file explorer functionality

* fix class fetch

* add gossping functionality

* save to saveDir

* remove requiresApi

* do more frequent periodic informs

* session active set false

* Update AppGossiper.kt

* Update AppGossiper.kt

* Update AppGossiper.kt

* Update AppGossiper.kt

* Upload filename as a button

* Allow an uploaded .apk to be run

* Update torrent count

* Add toggle for progress bar

* Clean up code

* moved apk upload to cachedir from trustchain superapp (similar to MusicDAO)

* reset sdk versions to 30, as FoC now only accesses app specific files from code

* removed the permissions for writing as it is no longer required

* improved code style

* added security measure such that only files in cachedirectory can be accessed by FoC

* stability and QoL changes

* changed directory after merge

* forgot a location to change the directory

* clone packets list

* bump download timeout to 3 minutes

* add back session manager init

* code cleanup

* add torrent for downloaded file and clean up code

* move init logic to gossiper

* Add unsuccessful button and download strings

* add eva protocol as fallback to download not working

* refactoring and reset failure count on eva failure

* refactoring and pause gossiping when activity 

--- a/freedomOfComputing/src/main/AndroidManifest.xml
+++ b/freedomOfComputing/src/main/AndroidManifest.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nl.tudelft.trustchain.FOC">
+          package="nl.tudelft.trustchain.FOC">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application>
-        <activity android:name=".ExecutionActivity" />
+        <activity
+            android:name=".ExecutionActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="nl.tudelft.trustchain.FOC.MainActivityFOC"
             android:label="@string/title_activity_main_FOC"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateHidden" />
     </application>
 
 </manifest>
