--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -23,6 +23,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -70,4 +71,6 @@ dependencies {
     implementation 'io.github.microutils:kotlin-logging:1.7.7'
 
     implementation 'com.tom-roush:pdfbox-android:2.0.16.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.databinding:databinding-runtime:4.2.2'
 }
