--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     implementation 'com.tom-roush:pdfbox-android:2.0.16.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.databinding:databinding-runtime:4.2.2'
+
+    // File io
+    implementation 'commons-io:commons-io:2.11.0'
 }
