--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -76,4 +76,5 @@ dependencies {
 
     // File io
     implementation 'commons-io:commons-io:2.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.1.0'
 }
