Initial version of integration MV-DAO into MusicDAO

--- a/gossipML/build.gradle
+++ b/gossipML/build.gradle
@@ -90,7 +90,7 @@ android {
         abi {
             enable true
             reset()
-            include 'arm64-v8a', 'x86', 'armeabi-v7a', 'x86_64'
+            include 'x86', 'armeabi-v7a', 'x86_64'
             universalApk true
         }
     }
