Fix lint errors and warnings + add experimental types to compiler args

--- a/literaturedao/build.gradle
+++ b/literaturedao/build.gradle
@@ -78,3 +78,10 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'com.squareup.okhttp3:okhttp:4.1.0'
 }
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions.freeCompilerArgs += [
+        "-Xuse-experimental=kotlin.Experimental,kotlin.ExperimentalUnsignedTypes",
+        "-Werror" // Set Kotlin compiler warnings as errors
+    ]
+}
