--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,9 +126,9 @@ dependencies {
     implementation project(':freedomOfComputing')
     implementation project(':peerchat')
     implementation project(':eurotoken')
-    implementation project(':ig-ssi')
+//    implementation project(':ig-ssi')
     implementation project(':liquidity-pool')
-    implementation project(':valuetransfer')
+//    implementation project(':valuetransfer')
     implementation project(':atomic-swap')
     implementation project(':literaturedao')
     api(project(':common')){
