--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     implementation project(':eurotoken')
     implementation project(':ig-ssi')
     implementation project(':liquidity-pool')
-//    implementation project(':valuetransfer')
+    implementation project(':valuetransfer')
     implementation project(':atomic-swap')
     implementation project(':literaturedao')
     api(project(':common')){
